<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.stocks</groupId>
	<artifactId>stockease</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>StockEase</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.modulith</groupId>
				<artifactId>spring-modulith-bom</artifactId>
				<version>2.1.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<!-- Spring Boot Dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc</artifactId>
		</dependency>
		<!-- Actuator for health checks and metrics -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<!-- Developer Tools -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		 <!-- PostgreSQL Driver -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.7.8</version>
			<scope>runtime</scope>
		</dependency>
		 <!-- Lombok Dependency -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<!-- Removed explicit version to use the managed version -->
            <scope>provided</scope>
		</dependency>
    	<!-- Spring Security -->
    	<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-security</artifactId>
    	</dependency>

    	<!-- JWT Library -->
    	<dependency>
        	<groupId>io.jsonwebtoken</groupId>
        	<artifactId>jjwt-api</artifactId>
        	<version>0.12.6</version>
    	</dependency>
    	<dependency>
        	<groupId>io.jsonwebtoken</groupId>
        	<artifactId>jjwt-impl</artifactId>
        	<version>0.12.6</version>
        	<scope>runtime</scope>
    	</dependency>
    	<dependency>
        	<groupId>io.jsonwebtoken</groupId>
        	<artifactId>jjwt-jackson</artifactId>
        	<version>0.12.6</version>
        	<scope>runtime</scope>
    	</dependency>
		 <!-- Jakarta Persistence API -->
    	<dependency>
        	<groupId>jakarta.persistence</groupId>
        	<artifactId>jakarta.persistence-api</artifactId>
			<!-- Removed explicit version to use the managed version -->
    	</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<!-- Validation -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		 <!-- Hibernate Core -->
    	<dependency>
        	<groupId>org.hibernate.orm</groupId>
        	<artifactId>hibernate-core</artifactId>
			<!-- Removed explicit version to use the managed version -->
    	</dependency>

		<!-- Testing Dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>

			<!-- Flyway for DB migrations -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-flyway</artifactId>
			</dependency>
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-database-postgresql</artifactId>
			</dependency>

		<!--Mockito Dependencies-->
		<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-core</artifactId>
    		<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-junit-jupiter</artifactId>
    		<scope>test</scope>
		</dependency>

		<!--Spring Security Test-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Testcontainers: real PostgreSQL for database tests -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-testcontainers</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers-postgresql</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Spring Modulith: module boundary structure and verification -->
		<dependency>
			<groupId>org.springframework.modulith</groupId>
			<artifactId>spring-modulith-starter-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.modulith</groupId>
			<artifactId>spring-modulith-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			 <!-- Maven Compiler Plugin -->
			<plugin>
    			<groupId>org.apache.maven.plugins</groupId>
    			<artifactId>maven-compiler-plugin</artifactId>
    			<version>3.13.0</version>
    			<configuration>
        			<source>${java.version}</source>
        			<target>${java.version}</target>
        			<compilerArgs>
						<arg>-parameters</arg>
        			</compilerArgs>
    			</configuration>
			</plugin>

			<!-- Spring Boot Maven Plugin -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
				</configuration>
			</plugin>

			<!-- JaCoCo Maven Plugin for Code Coverage -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<!-- Prepare agent for unit tests -->
					<execution>
						<id>prepare-agent</id>
						<phase>process-test-classes</phase>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<destFile>${project.build.directory}/jacoco.exec</destFile>
						</configuration>
					</execution>
					<!-- Generate HTML coverage report into target/site/jacoco -->
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${project.build.directory}/jacoco.exec</dataFile>
							<outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
							<excludes>
								<!-- Flyway Java migrations are infrastructure seed code; idempotency
								     guard branches (already-exists checks) are only exercised on
								     production re-runs, not in unit tests. -->
								<exclude>db/migration/**</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>

		<!-- Flyway Maven Plugin for DB migrations in CI -->
			<plugin>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-maven-plugin</artifactId>
				<version>11.7.2</version>
				<configuration>
					<url>${flyway.url}</url>
					<user>${flyway.user}</user>
					<password>${flyway.password}</password>
					<locations>
						<location>classpath:db/migration</location>
					</locations>
					<baselineOnMigrate>true</baselineOnMigrate>
					<cleanDisabled>true</cleanDisabled>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.flywaydb</groupId>
						<artifactId>flyway-database-postgresql</artifactId>
						<version>11.7.2</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

</project>
